# goldline-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  STATUS.md  TECHNICAL.md  pyproject.toml
.claude/commands/: wscommit.md  wsmistake.md  wsorchestrate.md  wsresearch.md  wsskeptic.md  wsstart.md  wsstatus.md  wsverify.md
inventory/: inventory.db  seed_inventory.py
knowledge_base/documents/: company_info.md  locations_contact.md  ordering_policy.md  returns_policy.md  shipping_policy.md
scripts/: demo_evals.ps1  demo_evals.sh  start.sh
src/: agent.py  api.py  cli.py  config.py  history.py  knowledge.py  prompts.py  quotes.py  tools.py
tests/: conftest.py  test_history.py  test_knowledge.py  test_prompts.py  test_tools.py
tests/evals/: conftest.py  golden_set.json  test_golden_set.py  test_hallucination.py  test_quote_flow.py  test_scope_and_brand.py  test_stock_leakage.py  test_tool_routing.py
web/: middleware.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/auth/login/: route.ts
web/app/api/auth/logout/: route.ts
web/app/components/: ChatPanel.tsx  Logo.tsx  TracePanel.tsx
web/app/hooks/: useChat.ts
web/app/login/: page.tsx
