[project]
name = "goldline-agent"
version = "1.0.0"
description = "GoldLine Office Supplies — AI Customer Support Agent"
requires-python = ">=3.12"

dependencies = [
    "anthropic",
    "openai>=2.14.0",
    "langsmith>=0.6.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "rich>=13.0.0",
]

[project.scripts]
goldline = "src.cli:main"
