[project]
name = "goldline-agent"
version = "1.0.0"
description = "GoldLine Office Supplies — AI Customer Support Agent"
requires-python = ">=3.12"

dependencies = [
    "anthropic",
    "openai>=2.14.0",
    "langsmith>=0.6.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "rich>=13.0.0",
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "sse-starlette>=3.3.2",
]

[project.scripts]
goldline = "src.cli:main"
goldline-api = "uvicorn:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "eval: LLM behavioral evals (require API keys, slow)",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
